--- a/gestion de consulta/Web.config
+++ b/gestion de consulta/Web.config
@@ -40,7 +40,6 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
- 
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -48,4 +47,7 @@
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
+  <connectionStrings>
+    <add name="bd_clinicaEntities" connectionString="metadata=res://*/Models.bd_clinica.csdl|res://*/Models.bd_clinica.ssdl|res://*/Models.bd_clinica.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;password=jhonny;persistsecurityinfo=True;database=bd_clinica&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
