--- a/gestion de consulta/Web.config
+++ b/gestion de consulta/Web.config
@@ -48,6 +48,6 @@
     </defaultConnectionFactory>
   </entityFramework>
   <connectionStrings>
-    <add name="bd_clinicaEntities" connectionString="metadata=res://*/Models.bd_clinica.csdl|res://*/Models.bd_clinica.ssdl|res://*/Models.bd_clinica.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;password=jhonny;persistsecurityinfo=True;database=bd_clinica&quot;" providerName="System.Data.EntityClient" />
+    <add name="bd_clinicaEntities_" connectionString="metadata=res://*/Models.bd_clinica.csdl|res://*/Models.bd_clinica.ssdl|res://*/Models.bd_clinica.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;password=jhonny;persistsecurityinfo=True;database=bd_clinica&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
