--- a/gestion de consulta/gestion de consulta.csproj
+++ b/gestion de consulta/gestion de consulta.csproj
@@ -164,6 +164,7 @@
     <Content Include="Models\bd_clinica.edmx.diagram">
       <DependentUpon>bd_clinica.edmx</DependentUpon>
     </Content>
+    <Content Include="ClassDiagram1.cd" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Models\bd_clinica.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
@@ -176,20 +177,25 @@
       <LastGenOutput>bd_clinica.cs</LastGenOutput>
     </Content>
     <Content Include="Scripts\bootstrap.bundle.min.js" />
+    <Content Include="Scripts\datatables-demo.js" />
+    <Content Include="Scripts\dataTables.bootstrap4.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
     <Content Include="Scripts\jquery-3.3.1.slim.js" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.js" />
     <Content Include="Scripts\jquery-ui-1.12.1.js" />
     <Content Include="Scripts\jquery-ui-1.12.1.min.js" />
+    <Content Include="Scripts\jquery.dataTables.js" />
     <Content Include="Scripts\jquery.easing.min.js" />
     <Content Include="Scripts\Login.js" />
+    <Content Include="Scripts\medico.js" />
     <Content Include="Scripts\paciente.js" />
     <Content Include="Scripts\sb-admin.min.js" />
     <Content Include="Web.config" />
     <Content Include="Views\Shared\_LayoutPaciente.cshtml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccesoDatos\AccesoDatosMedico.cs" />
     <Compile Include="AccesoDatos\Acceso_Datos.cs" />
     <Compile Include="AccesoDatos\AccesoDatosPaciente.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
@@ -219,6 +225,7 @@
     <Compile Include="Models\citas.cs">
       <DependentUpon>bd_clinica.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\CitasMedico.cs" />
     <Compile Include="Models\historial_clinico.cs">
       <DependentUpon>bd_clinica.tt</DependentUpon>
     </Compile>
@@ -262,6 +269,7 @@
     <Content Include="Views\Funcionario\Inicio.cshtml" />
     <Content Include="Views\Administrador\Inicio.cshtml" />
     <Content Include="Views\Paciente\ActualizarDatos.cshtml" />
+    <Content Include="Views\Medico\CitasMedico.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
